--- a/CPSICClasses.vcxproj.filters
+++ b/CPSICClasses.vcxproj.filters
@@ -95,5 +95,8 @@
     <ClCompile Include="src\Zone.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\CPSICDataStorage.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
