--- a/CPSICClasses.vcxproj.filters
+++ b/CPSICClasses.vcxproj.filters
@@ -30,9 +30,6 @@
     <ClInclude Include="src\Clinician.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\CPSICDataStorage.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\CPSICUser.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -95,8 +92,16 @@
     <ClCompile Include="src\Zone.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\CPSICDataStorage.cpp">
+    <ClCompile Include="src\CPSICUserInterface.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="html\index.html">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
