little stuff leftover from whenever this was i just want it gone

--- a/Schedule Release/Schedule Release.vcxproj
+++ b/Schedule Release/Schedule Release.vcxproj
@@ -88,7 +88,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
@@ -147,12 +147,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\Administrator.cpp" />
     <ClCompile Include="..\src\Appointment.cpp" />
+    <ClCompile Include="..\src\Clinician.cpp" />
+    <ClCompile Include="..\src\Patient.cpp" />
     <ClCompile Include="..\src\Schedule.cpp" />
     <ClCompile Include="Schedule Release.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\Administrator.h" />
     <ClInclude Include="..\src\Appointment.h" />
+    <ClInclude Include="..\src\Clinician.h" />
+    <ClInclude Include="..\src\Patient.h" />
     <ClInclude Include="..\src\Schedule.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
