--- a/Schedule Release/Schedule Release.vcxproj.filters
+++ b/Schedule Release/Schedule Release.vcxproj.filters
@@ -24,12 +24,30 @@
     <ClCompile Include="..\src\Appointment.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\Administrator.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Clinician.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\Patient.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\Schedule.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\Appointment.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Administrator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Clinician.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\Patient.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
